[package]
name = "handlers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
authorize = { path = "../authorize" }
axum = { version = "0.8.1", features = ["query"] }
chrono = "0.4.40"
jwt = { path = "../jwt" }
oauth2 = "5.0.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.218"
serde_json = "1.0.139"
token = { path = "../token" }
tower-sessions = "0.14.0"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
