[package]
name = "handlers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
authorize = { path = "../authorize" }
axum = { version = "0.8.8", features = ["query"] }
chrono = "0.4.43"
jwt = { path = "../jwt" }
oauth2 = "5.0.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
token = { path = "../token" }
tower-sessions = "0.14.0"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
